--- a/GBEmu/MainWindow.xib
+++ b/GBEmu/MainWindow.xib
@@ -58,7 +58,7 @@
 							<string key="NSFrame">{{494, 13}, {98, 32}}</string>
 							<reference key="NSSuperview" ref="312036702"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="418100166"/>
+							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="462755152">
@@ -109,8 +109,9 @@
 															<object class="NSTextFieldCell" key="NSCell" id="169568904">
 																<int key="NSCellFlags">67108928</int>
 																<int key="NSCellFlags2">272631808</int>
-																<string key="NSContents">Table View Cell</string>
+																<string key="NSContents"/>
 																<reference key="NSSupport" ref="629766996"/>
+																<string key="NSPlaceholderString">registername</string>
 																<reference key="NSControlView" ref="542928667"/>
 																<object class="NSColor" key="NSBackgroundColor" id="916580462">
 																	<int key="NSColorSpace">6</int>
@@ -150,14 +151,15 @@
 															<string key="NSFrameSize">{106, 17}</string>
 															<reference key="NSSuperview" ref="653532694"/>
 															<reference key="NSWindow"/>
-															<reference key="NSNextKeyView" ref="493849992"/>
+															<reference key="NSNextKeyView" ref="489308495"/>
 															<string key="NSAntiCompressionPriority">{250, 750}</string>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSTextFieldCell" key="NSCell" id="292800057">
 																<int key="NSCellFlags">67108928</int>
 																<int key="NSCellFlags2">272631808</int>
-																<string key="NSContents">Table View Cell</string>
+																<string key="NSContents"/>
 																<reference key="NSSupport" ref="629766996"/>
+																<string key="NSPlaceholderString">register value</string>
 																<reference key="NSControlView" ref="833991154"/>
 																<reference key="NSBackgroundColor" ref="916580462"/>
 																<reference key="NSTextColor" ref="595170641"/>
@@ -198,6 +200,7 @@
 											</object>
 											<array class="NSMutableArray" key="NSTableColumns">
 												<object class="NSTableColumn" id="152501505">
+													<string key="NSIdentifier">Register</string>
 													<double key="NSWidth">118</double>
 													<double key="NSMinWidth">40</double>
 													<double key="NSMaxWidth">1000</double>
@@ -242,10 +245,10 @@
 													</object>
 													<int key="NSResizingMask">3</int>
 													<bool key="NSIsResizeable">YES</bool>
-													<bool key="NSIsEditable">YES</bool>
 													<reference key="NSTableView" ref="333191067"/>
 												</object>
 												<object class="NSTableColumn" id="277914217">
+													<string key="NSIdentifier">Value</string>
 													<double key="NSWidth">106</double>
 													<double key="NSMinWidth">40</double>
 													<double key="NSMaxWidth">1000</double>
@@ -268,7 +271,6 @@
 													</object>
 													<int key="NSResizingMask">3</int>
 													<bool key="NSIsResizeable">YES</bool>
-													<bool key="NSIsEditable">YES</bool>
 													<reference key="NSTableView" ref="333191067"/>
 												</object>
 											</array>
@@ -326,7 +328,7 @@
 									<string key="NSFrame">{{1, 118}, {238, 16}}</string>
 									<reference key="NSSuperview" ref="418100166"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
+									<reference key="NSNextKeyView" ref="493849992"/>
 									<string key="NSReuseIdentifierKey">_NS:61</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									<string key="NSControlAction">_doScroller:</string>
@@ -342,7 +344,7 @@
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="418100166"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="489308495"/>
+									<reference key="NSNextKeyView" ref="9063566"/>
 									<string key="NSReuseIdentifierKey">_NS:65</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									<string key="NSControlAction">_doScroller:</string>
@@ -370,7 +372,7 @@
 					<string key="NSFrameSize">{606, 354}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
-					<reference key="NSNextKeyView"/>
+					<reference key="NSNextKeyView" ref="418100166"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 877}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
@@ -394,6 +396,14 @@
 						<reference key="destination" ref="9063566"/>
 					</object>
 					<int key="connectionID">35</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">RegisterTable</string>
+						<reference key="source" ref="748157544"/>
+						<reference key="destination" ref="333191067"/>
+					</object>
+					<int key="connectionID">36</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -601,11 +611,13 @@
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="27.userInterfaceItemIdentifier">cell</string>
 				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<reference key="3.IBNSViewMetadataGestureRecognizers" ref="0"/>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="31.userInterfaceItemIdentifier">cell</string>
 				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -615,13 +627,24 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">35</int>
+			<int key="maxID">36</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">MainWindow</string>
 					<string key="superclassName">NSWindow</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">RegisterTable</string>
+						<string key="NS.object.0">NSTableView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">RegisterTable</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">RegisterTable</string>
+							<string key="candidateClassName">NSTableView</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">../MainWindow.h</string>
@@ -630,6 +653,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">MainWindowController</string>
 					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">executeNextStep:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">executeNextStep:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">executeNextStep:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">../MainWindowController.h</string>
