--- a/GBEmu/GBEmu/Base.lproj/Main.storyboard
+++ b/GBEmu/GBEmu/Base.lproj/Main.storyboard
@@ -1063,17 +1063,24 @@
                                     <action selector="executeNextInstruction:" target="XfG-lQ-9wD" id="7Cf-k1-bsc"/>
                                 </connections>
                             </button>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jdl-c1-de7">
+                                <rect key="frame" x="849" y="297" width="160" height="32"/>
+                                <buttonCell key="cell" type="push" title="run to RET" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ASm-1r-SOI">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="runToRet:" target="XfG-lQ-9wD" id="rbs-lg-EPh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="fB3-7y-Bdf" secondAttribute="bottom" constant="20" symbolic="YES" id="0fP-nP-HkW"/>
-                            <constraint firstItem="L2g-dh-4QJ" firstAttribute="leading" secondItem="fB3-7y-Bdf" secondAttribute="trailing" constant="10" id="1wi-Co-6Rz"/>
                             <constraint firstItem="TqY-8c-WUu" firstAttribute="trailing" secondItem="5cW-Q7-L5k" secondAttribute="trailing" id="3sh-kH-Q1E"/>
                             <constraint firstItem="MHO-IM-jIk" firstAttribute="top" secondItem="Lpr-1X-Z6g" secondAttribute="bottom" constant="8" symbolic="YES" id="4i7-wx-98a"/>
-                            <constraint firstItem="EpQ-Fd-NrH" firstAttribute="bottom" secondItem="fB3-7y-Bdf" secondAttribute="bottom" id="6od-GM-QzM"/>
                             <constraint firstItem="5cW-Q7-L5k" firstAttribute="top" secondItem="TqY-8c-WUu" secondAttribute="bottom" constant="12" symbolic="YES" id="7dg-vM-zKW"/>
                             <constraint firstItem="EpQ-Fd-NrH" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="229" id="BAa-SW-Pwt"/>
-                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="top" secondItem="L2g-dh-4QJ" secondAttribute="top" id="Bnd-pg-qYk"/>
                             <constraint firstAttribute="trailing" secondItem="TqY-8c-WUu" secondAttribute="trailing" constant="119" id="CaF-sE-RaD"/>
+                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="top" secondItem="L2g-dh-4QJ" secondAttribute="top" id="Chf-fP-3FG"/>
                             <constraint firstItem="BBk-W3-hfr" firstAttribute="trailing" secondItem="5cW-Q7-L5k" secondAttribute="trailing" id="FjV-w1-JJf"/>
                             <constraint firstItem="L2g-dh-4QJ" firstAttribute="trailing" secondItem="EpQ-Fd-NrH" secondAttribute="trailing" id="HGK-Bl-3zs"/>
                             <constraint firstItem="5cW-Q7-L5k" firstAttribute="leading" secondItem="TqY-8c-WUu" secondAttribute="leading" id="HUk-ld-pll"/>
@@ -1089,12 +1096,15 @@
                             <constraint firstItem="7Q7-wd-iLq" firstAttribute="centerY" secondItem="TqY-8c-WUu" secondAttribute="centerY" id="cOI-BV-nu2"/>
                             <constraint firstItem="TqY-8c-WUu" firstAttribute="leading" secondItem="7Q7-wd-iLq" secondAttribute="trailing" constant="85" id="dqi-Vf-QVs"/>
                             <constraint firstItem="EpQ-Fd-NrH" firstAttribute="top" secondItem="L2g-dh-4QJ" secondAttribute="bottom" constant="8" symbolic="YES" id="iIy-eh-sAD"/>
+                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="bottom" secondItem="EpQ-Fd-NrH" secondAttribute="bottom" id="oQD-BJ-bnN"/>
                             <constraint firstItem="MHO-IM-jIk" firstAttribute="leading" secondItem="Lpr-1X-Z6g" secondAttribute="leading" id="oiW-Gp-dRF"/>
                             <constraint firstItem="88h-u8-RUm" firstAttribute="leading" secondItem="7Q7-wd-iLq" secondAttribute="leading" id="rUu-p8-9mL"/>
+                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="s3g-8S-9nN"/>
                             <constraint firstItem="7Q7-wd-iLq" firstAttribute="top" secondItem="88h-u8-RUm" secondAttribute="bottom" constant="7" id="t3O-jh-N9x"/>
-                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="ufY-Hs-7F5"/>
-                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="vV3-wp-YW9"/>
                             <constraint firstItem="L2g-dh-4QJ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="373" id="veL-Kq-cgt"/>
+                            <constraint firstItem="EpQ-Fd-NrH" firstAttribute="leading" secondItem="fB3-7y-Bdf" secondAttribute="trailing" constant="10" id="vup-Zc-4Et"/>
+                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="xIc-LB-qVi"/>
+                            <constraint firstAttribute="bottom" secondItem="fB3-7y-Bdf" secondAttribute="bottom" constant="20" symbolic="YES" id="zdO-62-ifP"/>
                         </constraints>
                     </view>
                     <connections>
