--- a/GBEmu/GBEmu/Base.lproj/Main.storyboard
+++ b/GBEmu/GBEmu/Base.lproj/Main.storyboard
@@ -926,7 +926,7 @@
                                     <rect key="frame" x="1" y="119" width="223" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="3gr-8y-R7i">
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="3gr-8y-R7i">
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
@@ -1120,6 +1120,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="displayView" destination="b7p-DR-wa9" id="WZh-4D-uKv"/>
                         <outlet property="lastInstructionLabel" destination="MHO-IM-jIk" id="8yi-wV-cza"/>
                         <outlet property="memoryTableView" destination="x5a-uO-6hl" id="Ok6-mw-fUF"/>
                         <outlet property="nextInstructionLabel" destination="7Q7-wd-iLq" id="PxY-hq-l0d"/>
